<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/colorPrimaryDark"
    android:layout_alignParentRight="true"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:background="@color/colorBackground"
    tools:context="com.byethost5.egle.BeautyRoom.NewEntryActivity">


    <ScrollView
        android:layout_width="358dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_procedura" />

            <Spinner
                android:id="@+id/new_entry_procedura_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_data" />

            <DatePicker
                android:id="@+id/new_entry_data_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_laikas" />

            <RadioGroup
                android:id="@+id/new_entry_laikasRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/new_entry_laikas_9_00_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_entry_laikas_9_00"
                        android:checked="true"/>

                <RadioButton
                    android:id="@+id/new_entry_laikas_10_00_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_laikas_10_00"/>

                <RadioButton
                    android:id="@+id/new_entry_laikas_11_00_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_laikas_11_00"/>

            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_darbuotojas" />

            <RadioGroup
                android:id="@+id/new_entry_darbuotojasRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/new_entry_darbuotojas_lina_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_darbuotojas_lina"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/new_entry_darbuotojas_asta_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_darbuotojas_asta"/>

                <RadioButton
                    android:id="@+id/new_entry_darbuotojas_sandra_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_darbuotojas_sandra"/>

            </RadioGroup>

            <Button
                android:id="@+id/new_entry_register_button_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Registruotis"/>

        </LinearLayout>











    </ScrollView>

</android.support.constraint.ConstraintLayout>
