<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.byethost5.egle.BeautyRoom.RegisterActivity">


    <LinearLayout
        android:id="@+id/login_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg"
        >


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            />

        <EditText
            android:id="@+id/login_username_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            />

        <EditText
            android:id="@+id/login_repeat_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_repeat_password"
            />

        <EditText
            android:id="@+id/login_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />


        <Button
            android:id="@+id/login_register_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            />

    </LinearLayout>

</RelativeLayout>
